[package]
name = "bili-manga-downloader"
version = "0.1.3"
edition = "2021"
authors = ["Kayne <w.zengkai@gmail.com>"]
description = "哔哩哔哩漫画下载工具"
keywords = ["bilibili", "comics", "downloader", "cli"]
readme = "README.md"
repository = "https://github.com/KayneWang/bilibili-manga-downloader"
license-file = "LICENSE"

[dependencies]
dialoguer = "0.11"
indicatif = "0.17"
crossterm = "0.27"
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
zip = "2.1.3"
regex = "1.10.5"
bytes = "1.6"
